# Robodog_2026

./: .gitignore  3d.py  CLAUDE.md  CMakeLists.txt  bindings.cpp  detect.py  detect_trt.py  dog_control.py  error_test.py  m.py  orbbec_camera.cpp  robot_arm.py  sound_output.py  task1.py  task1_1.py  test.py  udp.py  walk_test.py  yolov5trt.py  zzz__try.py
Log/: OrbbecSDK.log.txt
robot_arm/: write.py
scservo_sdk/: port_handler.py
task1/: test.py  walk_test.py
task1/Log/: OrbbecSDK.log.txt
task2/: dog_control_sxh_test.py  main.py  udp.py
task2/tasks/: calibrate_first_dashboard_thresholds.py  dashboard_letter_detector.py  print_dashboard_area.py  task2_new.py  walk.py
task3/: README.md  arm_control.py  calibrate_pixel.py  calibration.json  disable_all_servos.py  dog_control.py  git_step.markdown  grasp_tag_demo.py  monitor_servos.py  obj_det.py  reset_arm.py  tag_detector.py  task3.py  test_arm.py  three_Inverse_kinematics.py  udp.py  vision_control.py
task3/Arm/: calibration.py  camera_safety.py  config.py  disable_servos.py  kinematics.py  monitor_servos.py  params.json  reset_arm.py  servo_driver.py  vision_grasp.py
task3/Log/: OrbbecSDK.log.txt
task3/__pycache__/: arm_control.cpython-312.pyc.1820206797360  arm_control.cpython-312.pyc.2251423650064  arm_control.cpython-312.pyc.2429236918384  arm_control.cpython-312.pyc.2726031299120  calibration.cpython-312.pyc.1495353576160  calibration.cpython-312.pyc.1986464959488  camera_adapter.cpython-312.pyc.3113147302576  camera_safety.cpython-312.pyc.1724475879568  config.cpython-312.pyc.2173242886736  config.cpython-312.pyc.2964237119200  disable_servos.cpython-312.pyc.2086413206192  dog_control.cpython-312.pyc.1821020251328  dog_control.cpython-312.pyc.1879124839856  dog_control.cpython-312.pyc.1896860913072  dog_control.cpython-312.pyc.2252237672288  dog_control.cpython-312.pyc.2291285593520  dog_control.cpython-312.pyc.2314581190880  dog_control.cpython-312.pyc.2376961396144  dog_control.cpython-312.pyc.2429230288592  dog_control.cpython-312.pyc.2726844671312  grasp_tag_demo.cpython-312.pyc.1897673279360  grasp_tag_demo.cpython-312.pyc.2358894864608  kinematics.cpython-312.pyc.1448538387008  kinematics.cpython-312.pyc.2042614238208  kinematics.cpython-312.pyc.2173242888320  (+27 more)
test/: test.py  test_sound.py  video_test.py
test_jc/: YoLov5.py  mark.py  mark_2.py  mark_onnx.py  mark_wts.py  onnx_trt.py  onnx_trt_1.py  test.py  test_2.py  test_video.py  test_video_1.py  yolov5trt.py
test_jc/tensorrtx-master/yolov5/: CMakeLists.txt
test_sjh/: dog_control.py  record_videos.py  record_videos.sh  test.py  test0309.py  udp.py
(+2624 files in other folders)
